--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AJ Blog</title>
+  <title>Project Mpenzi</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Ethan Granato | www.ethangranato.com">
+  <meta name="description" content="The Travel Blog of Alissa Granato">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
